@@ -3,7 +3,6 @@ package org.usf.jquery.web.view;
 import static java.lang.System.currentTimeMillis;
 import static java.lang.System.lineSeparator;
 import static java.nio.file.Files.readString;
-import static java.util.stream.Collectors.toList;
 import static org.usf.jquery.web.view.WebViewMapper.TableColumn.columns;
 import static org.usf.jquery.web.view.WebViewMapper.WebType.NUMBER;
 import static org.usf.jquery.web.view.WebViewMapper.WebType.STRING;
@@ -46,7 +45,7 @@ public class SankeyView implements WebViewMapper {
 		var bg = currentTimeMillis();
         var rw = 0;
         var cols = columns(rs.getMetaData());
-        var xAxis = Stream.of(cols).filter(c-> c.getType() == STRING).collect(toList());
+        var xAxis = Stream.of(cols).filter(c-> c.getType() == STRING).toList();
         if(xAxis.size() != 2) {
         	throw new IllegalArgumentException("require [STRING, STRING, NUMBER] columns");
         }
